Fill out index structure with placeholder content

--- a/index.html
+++ b/index.html
@@ -2,20 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>City Zoo</title>
 </head>
 <body>
     <div class="header">
+        <img class="header-logo" src="#">
+        <a href="#">Link one</a>
+        <a href="#">Link two</a>
+        <a href="#">Link three</a>
     </div>
 
     <div class="content">
-        <div class="section-2"></div>
-        <div class="section-3"></div>
-        <div class="section-4"></div>
-        <div class="section-5"></div>
+        <div class="hero">
+            <div class="hero-left">
+                <div class="hero-header">City Zoo needs your help.</div>
+                <div class="hero-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque egestas congue quisque egestas diam in arcu. Augue interdum velit euismod in pellentesque massa placerat duis. Morbi tempus iaculis urna id volutpat lacus laoreet non</div>
+                <button class="hero-signup-button">Sign up</button>
+            </div>
+            <img class="hero-right" src="#">
+        </div>
+
+        <div class="info">
+            <div class="info-header">Further information</div>
+            <div class="info-icon-row">
+                <img class="icon" src="#">
+                <div class="icon-text">Some text beneath each icon.</div>
+                <img class="icon" src="#">
+                <div class="icon-text">Some text beneath each icon.</div>
+                <img class="icon" src="#">
+                <div class="icon-text">Some text beneath each icon.</div>
+                <img class="icon" src="#">
+                <div class="icon-text">Some text beneath each icon.</div>
+            </div>
+        </div>
+
+        <div class="quote">
+            <div class="quote-text">Largest text with quote goes here.</div>
+            <div class="quote-attribution">Quote attribution here</div>
+        </div>
+
+        <div class="action">
+            <div class="action-banner">
+                <div class="action-header">Call to action! It's time!</div>
+                <div class="action-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                <button class="action-signup-button">Sign up</button>
+            </div>
+        </div>
     </div>
     
     <div class="footer">
+        Copyright information
     </div>
 </body>
 </html>
