--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div class="header">
-        <img class="header-logo" src="#">
+        <img class="header-logo" src="./images/logo.png">
+        <div class="header-text">City Zoo</div>
         <a href="#">Link one</a>
         <a href="#">Link two</a>
         <a href="#">Link three</a>
