Add flexbox to header for horizontal layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="header">
         <img class="header-logo" src="./images/logo.png">
         <div class="header-text">City Zoo</div>
-        <a href="#">Link one</a>
+        <a class="header-link-one" href="#">Link one</a>
         <a href="#">Link two</a>
         <a href="#">Link three</a>
     </div>
