--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="hero-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque egestas congue quisque egestas diam in arcu. Augue interdum velit euismod in pellentesque massa placerat duis. Morbi tempus iaculis urna id volutpat lacus laoreet non</div>
                 <button class="hero-signup-button">Sign up</button>
             </div>
-            <img class="hero-right" src="#">
+            <img class="hero-right" src="./images/fox.jpg">
         </div>
 
         <div class="info">
