Adjust layout and add images and content for info section
This commit achieves the following for the info section: a horizontal
layout using flex, adds icon images, replaces placeholder text content,
and removes extraneous '.info' div container

--- a/index.html
+++ b/index.html
@@ -24,17 +24,23 @@
             <img class="hero-right" src="./images/fox.jpg">
         </div>
 
-        <div class="info">
-            <div class="info-header">Further information</div>
-            <div class="info-icon-row">
-                <img class="icon" src="#">
-                <div class="icon-text">Some text beneath each icon.</div>
-                <img class="icon" src="#">
-                <div class="icon-text">Some text beneath each icon.</div>
-                <img class="icon" src="#">
-                <div class="icon-text">Some text beneath each icon.</div>
-                <img class="icon" src="#">
-                <div class="icon-text">Some text beneath each icon.</div>
+        <div class="info-header">Further information</div>
+        <div class="info-icon-row">
+            <div class="info-icon-row-item">
+                <img class="icon" src="./images/education.png">
+                <div class="icon-text">Education of the public and raising awareness via fundraisers, advertising, and attractions.</div>
+            </div>
+            <div class="info-icon-row-item">
+                <img class="icon" src="./images/animal.png">
+                <div class="icon-text">Care for animals within our zoo, as well as providing assistance to animals at other zoos and facilities.</div>
+            </div>
+            <div class="info-icon-row-item">
+                <img class="icon" src="./images/habitat.png">
+                <div class="icon-text">Habitat conservation for wild animals and, where possible, habitat expansion.</div>
+            </div>
+            <div class="info-icon-row-item">
+                <img class="icon" src="./images/research.png">
+                <div class="icon-text">Research to learn more about these wonderful creatures in order to serve them better.</div>
             </div>
         </div>
 
