Adjust layout, style, and add content to quote section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 
@@ -51,8 +51,10 @@
         </div>
 
         <div class="quote">
-            <div class="quote-text">Largest text with quote goes here.</div>
-            <div class="quote-attribution">Quote attribution here</div>
+            <div class="container">
+                <div class="quote-text">Unless someone like you cares a whole awful lot, nothing is going to get better. It's not.</div>
+                <div class="quote-attribution">-Dr. Seuss, <span class="book-title">The Lorax</span></div>
+            </div>
         </div>
 
         <div class="action">
