Adjust layout, style, and add content to action section

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
 
         <div class="action">
             <div class="action-banner">
-                <div class="action-header">Call to action! It's time!</div>
-                <div class="action-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-                <button class="action-signup-button">Sign up</button>
+                <div class="action-container">
+                    <div class="action-header">Please consider donating today.</div>
+                    <div class="action-text">No matter how small, every donation helps to create a brighter future for animals everywhere.</div>
+                </div>
+                <a class="action-signup-link" href="#">Donate</a>
             </div>
         </div>
     </div>
