--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     
     <div class="footer">
-        Hero photo (fox) by <a href="https://unsplash.com/photos/nOsJYzXEG98">Dušan veverkolog</a> on <a href="https://unsplash.com/">Unsplash</a> / Hero logo (zoo) by <a href="https://www.flaticon.com/free-icon/zoo_2093797">iconixar</a> on <a href="https://www.flaticon.com/">flaticon</a> / All other icons by <a href="https://www.flaticon.com/authors/handicon">Handicon</a> on <a href="https://www.flaticon.com/">flaticon</a>
+        Hero photo (fox) by <a href="https://unsplash.com/photos/nOsJYzXEG98">Dušan veverkolog</a> on <a href="https://unsplash.com/">Unsplash</a> / Header logo (zoo) by <a href="https://www.flaticon.com/free-icon/zoo_2093797">iconixar</a> on <a href="https://www.flaticon.com/">flaticon</a> / All other icons by <a href="https://www.flaticon.com/authors/handicon">Handicon</a> on <a href="https://www.flaticon.com/">flaticon</a>
     </div>
 </body>
 </html>
