Add disclaimer to README and index.html footer

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
     </div>
     
     <div class="footer">
-        Hero photo (fox) by <a href="https://unsplash.com/photos/nOsJYzXEG98">Dušan veverkolog</a> on <a href="https://unsplash.com/">Unsplash</a> / Header logo (zoo) by <a href="https://www.flaticon.com/free-icon/zoo_2093797">iconixar</a> on <a href="https://www.flaticon.com/">flaticon</a> / All other icons by <a href="https://www.flaticon.com/authors/handicon">Handicon</a> on <a href="https://www.flaticon.com/">flaticon</a>
+        <div class="disclaimer">
+            Disclaimer: This is a fictional site created by <a href="https://github.com/grwthomps/odin-landing-page">Graham Thompson</a> as a learning project for <a href="https://www.theodinproject.com/">The Odin Project</a>. All elements are fictional and do not represent views of The Odin Project or any other creators attributed below.
+        </div>
+        <div class="attributions">
+            Hero photo (fox) by <a href="https://unsplash.com/photos/nOsJYzXEG98">Dušan veverkolog</a> on <a href="https://unsplash.com/">Unsplash</a> / Header logo (zoo) by <a href="https://www.flaticon.com/free-icon/zoo_2093797">iconixar</a> on <a href="https://www.flaticon.com/">flaticon</a> / All other icons by <a href="https://www.flaticon.com/authors/handicon">Handicon</a> on <a href="https://www.flaticon.com/">flaticon</a>
+        </div>
     </div>
 </body>
 </html>
