Replace placeholder content in header and hero sections

--- a/index.html
+++ b/index.html
@@ -15,38 +15,38 @@
     <div class="header">
         <img class="header-logo" src="./images/logo.png">
         <div class="header-text">City Zoo</div>
-        <a class="header-link-one" href="#">Link one</a>
-        <a href="#">Link two</a>
-        <a href="#">Link three</a>
+        <a class="header-link-one" href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Donate</a>
     </div>
 
     <div class="content">
         <div class="hero">
             <div class="hero-left">
                 <div class="hero-header">City Zoo needs your help.</div>
-                <div class="hero-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque egestas congue quisque egestas diam in arcu. Augue interdum velit euismod in pellentesque massa placerat duis. Morbi tempus iaculis urna id volutpat lacus laoreet non</div>
+                <div class="hero-text">Every year, millions of visitors come to City Zoo to see animals like the red fox pictured here. While caring for the animals that visitors see every day is our top priority, there are many other activities that are just as vital. Whether it's public educational programs or protecting vital habitats, <em>none of these efforts would be possible without your contributions.</em> Now, more than ever, animals around the world rely on our education, care, conservation, and research for their survival. Please consider donating today.</div>
                 <button class="hero-signup-button">Sign up</button>
             </div>
             <img class="hero-right" src="./images/fox.jpg">
         </div>
 
-        <div class="info-header">Further information</div>
+        <div class="info-header">How Your Donation is Used:</div>
         <div class="info-icon-row">
             <div class="info-icon-row-item">
                 <img class="icon" src="./images/education.png">
-                <div class="icon-text">Education of the public and raising awareness via fundraisers, advertising, and attractions.</div>
+                <div class="icon-text"><span class="bold-text">Education</span> of the public and raising awareness via fundraisers, advertising, and attractions.</div>
             </div>
             <div class="info-icon-row-item">
                 <img class="icon" src="./images/animal.png">
-                <div class="icon-text">Care for animals within our zoo, as well as providing assistance to animals at other zoos and facilities.</div>
+                <div class="icon-text"><span class="bold-text">Care</span> for animals within our zoo, as well as providing assistance to animals at other zoos and facilities.</div>
             </div>
             <div class="info-icon-row-item">
                 <img class="icon" src="./images/habitat.png">
-                <div class="icon-text">Habitat conservation for wild animals and, where possible, habitat expansion.</div>
+                <div class="icon-text">Habitat <span class="bold-text">conservation</span> for wild animals and, where possible, habitat expansion.</div>
             </div>
             <div class="info-icon-row-item">
                 <img class="icon" src="./images/research.png">
-                <div class="icon-text">Research to learn more about these wonderful creatures in order to serve them better.</div>
+                <div class="icon-text"><span class="bold-text">Research</span> to learn more about these wonderful creatures in order to serve them better.</div>
             </div>
         </div>
 
