Minor changes to content and font size

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="hero">
             <div class="hero-left">
                 <div class="hero-header">City Zoo needs your help.</div>
-                <div class="hero-text">Every year, millions of visitors come to City Zoo to see animals like the red fox pictured here. While caring for the animals that visitors see every day is our top priority, there are many other activities that are just as vital. Whether it's public educational programs or protecting vital habitats, <em>none of these efforts would be possible without your contributions.</em> Now, more than ever, animals around the world rely on our education, care, conservation, and research for their survival. Please consider donating today.</div>
-                <button class="hero-signup-button">Sign up</button>
+                <div class="hero-text">Every year, millions of visitors come to City Zoo to see animals like the red fox pictured here. While caring for our animals that visitors see every day is our top priority, there are many other activities that are just as vital. Whether it's public educational programs or protecting vital habitats, <em>none of these efforts would be possible without your contributions.</em> Now, more than ever, animals around the world rely on our education, care, conservation, and research for their survival. Please consider donating today.</div>
+                <a class="hero-signup-link" href="#">Donate</a>
             </div>
             <img class="hero-right" src="./images/fox.jpg">
         </div>
@@ -34,15 +34,15 @@
         <div class="info-icon-row">
             <div class="info-icon-row-item">
                 <img class="icon" src="./images/education.png">
-                <div class="icon-text"><span class="bold-text">Education</span> of the public and raising awareness via fundraisers, advertising, and attractions.</div>
+                <div class="icon-text"><span class="bold-text">Education</span> of the public through fundraisers, advertising, and attractions.</div>
             </div>
             <div class="info-icon-row-item">
                 <img class="icon" src="./images/animal.png">
-                <div class="icon-text"><span class="bold-text">Care</span> for animals within our zoo, as well as providing assistance to animals at other zoos and facilities.</div>
+                <div class="icon-text"><span class="bold-text">Care</span> for the animals within our zoo, as well as providing assistance to animals at other zoos and facilities.</div>
             </div>
             <div class="info-icon-row-item">
                 <img class="icon" src="./images/habitat.png">
-                <div class="icon-text">Habitat <span class="bold-text">conservation</span> for wild animals and, where possible, habitat expansion.</div>
+                <div class="icon-text"><span class="bold-text">Conservation</span> of wild animal habitats and, where possible, habitat expansion.</div>
             </div>
             <div class="info-icon-row-item">
                 <img class="icon" src="./images/research.png">
