Refactor header for a more flexible layout
Header now correctly matches spec image and has a cleaner layout with
flex rather than relying on an auto margin applied to a single element.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
 </head>
 <body>
     <div class="header">
-        <img class="header-logo" src="./images/logo.png">
-        <div class="header-text">City Zoo</div>
-        <a class="header-link-one" href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Donate</a>
+        <div class="header-container">
+            <div class="header-left">
+                <img class="header-logo" src="./images/logo.png">
+                <div class="header-text">City Zoo</div>
+            </div>
+            <div class="header-right">
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Donate</a>
+            </div>
+        </div>
     </div>
 
     <div class="content">
