Refactor info layout to prevent overflow when shrinking window
Icon row in info section no longer overflows horizontally out of div
container when shrinking the browser window

--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
             <img class="hero-right" src="./images/fox.jpg">
         </div>
 
-        <div class="info-header">How Your Donation is Used:</div>
-        <div class="info-icon-row">
-            <div class="info-icon-row-item">
-                <img class="icon" src="./images/education.png">
-                <div class="icon-text"><span class="bold-text">Education</span> of the public through fundraisers, advertising, and attractions.</div>
-            </div>
-            <div class="info-icon-row-item">
-                <img class="icon" src="./images/animal.png">
-                <div class="icon-text"><span class="bold-text">Care</span> for the animals within our zoo, as well as providing assistance to animals at other zoos and facilities.</div>
-            </div>
-            <div class="info-icon-row-item">
-                <img class="icon" src="./images/habitat.png">
-                <div class="icon-text"><span class="bold-text">Conservation</span> of wild animal habitats and, where possible, habitat expansion.</div>
-            </div>
-            <div class="info-icon-row-item">
-                <img class="icon" src="./images/research.png">
-                <div class="icon-text"><span class="bold-text">Research</span> to learn more about these wonderful creatures in order to serve them better.</div>
+        <div class="info">
+            <div class="info-header">How Your Donation is Used:</div>
+            <div class="info-icon-row">
+                <div class="info-icon-row-item">
+                    <img class="icon" src="./images/education.png">
+                    <div class="icon-text"><span class="bold-text">Education</span> of the public through fundraisers, advertising, and attractions.</div>
+                </div>
+                <div class="info-icon-row-item">
+                    <img class="icon" src="./images/animal.png">
+                    <div class="icon-text"><span class="bold-text">Care</span> for the animals within our zoo, as well as providing assistance to animals at other zoos and facilities.</div>
+                </div>
+                <div class="info-icon-row-item">
+                    <img class="icon" src="./images/habitat.png">
+                    <div class="icon-text"><span class="bold-text">Conservation</span> of wild animal habitats and, where possible, habitat expansion.</div>
+                </div>
+                <div class="info-icon-row-item">
+                    <img class="icon" src="./images/research.png">
+                    <div class="icon-text"><span class="bold-text">Research</span> to learn more about these wonderful creatures in order to serve them better.</div>
+                </div>
             </div>
         </div>
 
