Refactor hero section to match header and to allow for wrapping
Hero section now matches header by using flex to center layout and also
allows for wrapping image onto new line when shrinking window

--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
 
     <div class="content">
         <div class="hero">
-            <div class="hero-left">
-                <div class="hero-header">City Zoo needs your help.</div>
-                <div class="hero-text">Every year, millions of visitors come to City Zoo to see animals like the red fox pictured here. While caring for our animals that visitors see every day is our top priority, there are many other activities that are just as vital. Whether it's public educational programs or protecting vital habitats, <em>none of these efforts would be possible without your contributions.</em> Now, more than ever, animals around the world rely on our education, care, conservation, and research for their survival. Please consider donating today.</div>
-                <a class="hero-signup-link" href="#">Donate</a>
+            <div class="hero-container">
+                <div class="hero-left">
+                    <div class="hero-header">City Zoo needs your help.</div>
+                    <div class="hero-text">Every year, millions of visitors come to City Zoo to see animals like the red fox pictured here. While caring for our animals that visitors see every day is our top priority, there are many other activities that are just as vital. Whether it's public educational programs or protecting vital habitats, <em>none of these efforts would be possible without your contributions.</em> Now, more than ever, animals around the world rely on our education, care, conservation, and research for their survival. Please consider donating today.</div>
+                    <a class="hero-signup-link" href="#">Donate</a>
+                </div>
+                <div class="hero-right">
+                    <img src="./images/fox.jpg">
+                </div>
             </div>
-            <img class="hero-right" src="./images/fox.jpg">
         </div>
 
         <div class="info">
