Add alt text to all images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="header-container">
             <div class="header-left">
-                <img class="header-logo" src="./images/logo.png">
+                <img class="header-logo" src="./images/logo.png" alt="colorful icon depicting zoo entrance">
                 <div class="header-text">City Zoo</div>
             </div>
             <div class="header-right">
@@ -35,7 +35,7 @@
                     <a class="hero-signup-link" href="#">Donate</a>
                 </div>
                 <div class="hero-right">
-                    <img src="./images/fox.jpg">
+                    <img src="./images/fox.jpg" alt="red fox curled up in tree roots sleeping">
                 </div>
             </div>
         </div>
@@ -44,19 +44,19 @@
             <div class="info-header">How Your Donation is Used:</div>
             <div class="info-icon-row">
                 <div class="info-icon-row-item">
-                    <img class="icon" src="./images/education.png">
+                    <img class="icon" src="./images/education.png" alt="blue graduation cap icon">
                     <div class="icon-text"><span class="bold-text">Education</span> of the public through fundraisers, advertising, and attractions.</div>
                 </div>
                 <div class="info-icon-row-item">
-                    <img class="icon" src="./images/animal.png">
+                    <img class="icon" src="./images/animal.png" alt="red fox head icon">
                     <div class="icon-text"><span class="bold-text">Care</span> for the animals within our zoo, as well as providing assistance to animals at other zoos and facilities.</div>
                 </div>
                 <div class="info-icon-row-item">
-                    <img class="icon" src="./images/habitat.png">
+                    <img class="icon" src="./images/habitat.png" alt="green sprouting plant in soil icon">
                     <div class="icon-text"><span class="bold-text">Conservation</span> of wild animal habitats and, where possible, habitat expansion.</div>
                 </div>
                 <div class="info-icon-row-item">
-                    <img class="icon" src="./images/research.png">
+                    <img class="icon" src="./images/research.png" alt="microscope icon">
                     <div class="icon-text"><span class="bold-text">Research</span> to learn more about these wonderful creatures in order to serve them better.</div>
                 </div>
             </div>
